// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-2 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 3;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-4[lang='zh'],
.emotion-4[lang='zh-Hans'],
.emotion-4[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-4 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-4[lang='zh'],
  .emotion-4[lang='zh-Hans'],
  .emotion-4[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-5:hover,
.emotion-5:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5[lang='zh'],
.emotion-5[lang='zh-Hans'],
.emotion-5[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 label {
  padding: 0;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  white-space: nowrap;
}

.emotion-6 label[lang='zh'],
.emotion-6 label[lang='zh-Hans'],
.emotion-6 label[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-8 {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.emotion-8[lang='zh'],
.emotion-8[lang='zh-Hans'],
.emotion-8[lang='zh-Hant'] {
  font-size: calc(14 * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-10 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 2;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
}

.emotion-12:focus-within {
  border-color: #20588f;
}

.emotion-12 input,
.emotion-12 textarea {
  padding: 0 13px;
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-12 input[lang='zh'],
.emotion-12 textarea[lang='zh'],
.emotion-12 input[lang='zh-Hans'],
.emotion-12 textarea[lang='zh-Hans'],
.emotion-12 input[lang='zh-Hant'],
.emotion-12 textarea[lang='zh-Hant'] {
  font-size: calc(18 * 1.11);
  font-size: calc(1rem * 1.11);
}

.emotion-12 input:focus,
.emotion-12 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-12 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-12 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-14 {
  padding: 0 13px;
}

.emotion-15 {
  border: calc(26px / 6.5) solid rgba(0, 0, 0, 0.1);
  border-bottom-color: #20588f;
  border-radius: 50%;
  -webkit-animation: spinnerAnimation 0.7s linear infinite;
  animation: spinnerAnimation 0.7s linear infinite;
  height: 26px;
  width: 26px;
  margin: 0;
  display: block;
}

.emotion-17 {
  margin: 10px 0;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
}

.emotion-18:hover,
.emotion-18:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-18[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-18[lang='zh'],
.emotion-18[lang='zh-Hans'],
.emotion-18[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6.5px;
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-23:hover,
.emotion-23:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-23[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-23[lang='zh'],
.emotion-23[lang='zh-Hans'],
.emotion-23[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-23:hover,
.emotion-23:active,
.emotion-23:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-23[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-23 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-24:hover,
.emotion-24:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-24[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-24[lang='zh'],
.emotion-24[lang='zh-Hans'],
.emotion-24[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-24:hover,
.emotion-24:active,
.emotion-24:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-24[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-24 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
      contenteditable="false"
    >
      <div
        aria-hidden="true"
        class="emotion-1"
      />
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <h3
            class="c-related-articles__component-title emotion-4"
          >
            Relatert innhold
          </h3>
          <div
            data-tooltip="Fjern"
            data-tooltip-container="true"
          >
            <button
              aria-label="Fjern"
              class="emotion-5"
              data-cy="close-related-button"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <p>
          Dra artikkel for å endre rekkefølge
        </p>
        <div
          class="drop-zone"
        />
        <div
          data-cy="styled-article-modal"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label"
            role="combobox"
            style="position: relative;"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <label
                class="emotion-8 emotion-9"
                for="search-input-field"
              >
                Søk på tittel
              </label>
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-13"
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="search-input-field-error "
                    aria-invalid="false"
                    aria-labelledby="downshift-0-label"
                    autocomplete="off"
                    data-testid="dropdownInput"
                    id="downshift-0-input"
                    name="search-input-field"
                    placeholder="Søk på tittel"
                    value=""
                  />
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="emotion-15 emotion-16"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-17"
          >
            Eller
          </div>
          <button
            class="emotion-18"
            data-testid="showAddExternal"
            type="button"
          >
            Legg til ekstern artikkel
          </button>
        </div>
      </div>
    </div>
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-19 emotion-20"
      >
        <h3
          class="c-related-articles__component-title emotion-4"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-22"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-23"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-24"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-2 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 3;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-4[lang='zh'],
.emotion-4[lang='zh-Hans'],
.emotion-4[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-4 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-4[lang='zh'],
  .emotion-4[lang='zh-Hans'],
  .emotion-4[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-5:hover,
.emotion-5:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5[lang='zh'],
.emotion-5[lang='zh-Hans'],
.emotion-5[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4.333333333333333px;
  width: 100%;
}

.emotion-6>article {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4.333333333333333px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #20588f;
  background: #ceddea;
  border: 2px solid #ceddea;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-8:hover,
.emotion-8:focus-visible {
  color: #fff;
  background-color: #184673;
  border-color: #184673;
}

.emotion-8[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-8[lang='zh'],
.emotion-8[lang='zh-Hans'],
.emotion-8[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-8:hover,
.emotion-8:active,
.emotion-8:focus-visible {
  color: #20588f;
  background: #ceddea;
  border-color: #ceddea;
}

.emotion-8[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-8 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 label {
  padding: 0;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  white-space: nowrap;
}

.emotion-10 label[lang='zh'],
.emotion-10 label[lang='zh-Hans'],
.emotion-10 label[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-12 {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.emotion-12[lang='zh'],
.emotion-12[lang='zh-Hans'],
.emotion-12[lang='zh-Hant'] {
  font-size: calc(14 * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-14 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 2;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
}

.emotion-16:focus-within {
  border-color: #20588f;
}

.emotion-16 input,
.emotion-16 textarea {
  padding: 0 13px;
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-16 input[lang='zh'],
.emotion-16 textarea[lang='zh'],
.emotion-16 input[lang='zh-Hans'],
.emotion-16 textarea[lang='zh-Hans'],
.emotion-16 input[lang='zh-Hant'],
.emotion-16 textarea[lang='zh-Hant'] {
  font-size: calc(18 * 1.11);
  font-size: calc(1rem * 1.11);
}

.emotion-16 input:focus,
.emotion-16 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-16 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-16 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-18 {
  padding: 0 13px;
}

.emotion-19 {
  margin: 10px 0;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
}

.emotion-20:hover,
.emotion-20:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-20[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-20[lang='zh'],
.emotion-20[lang='zh-Hans'],
.emotion-20[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6.5px;
}

.emotion-25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-25:hover,
.emotion-25:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-25[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-25[lang='zh'],
.emotion-25[lang='zh-Hans'],
.emotion-25[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-25:hover,
.emotion-25:active,
.emotion-25:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-25[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-25 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-26:hover,
.emotion-26:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-26[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-26[lang='zh'],
.emotion-26[lang='zh-Hans'],
.emotion-26[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-26:hover,
.emotion-26:active,
.emotion-26:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-26[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-26 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
      contenteditable="false"
    >
      <div
        aria-hidden="true"
        class="emotion-1"
      />
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <h3
            class="c-related-articles__component-title emotion-4"
          >
            Relatert innhold
          </h3>
          <div
            data-tooltip="Fjern"
            data-tooltip-container="true"
          >
            <button
              aria-label="Fjern"
              class="emotion-5"
              data-cy="close-related-button"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <p>
          Dra artikkel for å endre rekkefølge
        </p>
        <div
          class="drop-zone"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="embed-1"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="embed-1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-6"
            >
              <article
                class="c-related-articles__item c-related-articles__item--external-learning-resources"
              >
                <h3
                  class="c-related-articles__title"
                >
                  <div
                    class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g>
                            <g>
                              <polygon
                                points="0 0 24 0 24 24 0 24"
                              />
                              <path
                                d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </div>
                  <span
                    class="c-related-articles__link-wrapper"
                  >
                    <a
                      class="c-related-articles__link"
                      href="https://www.vg.no"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Verdens gang
                    </a>
                  </span>
                </h3>
                <p
                  class="c-related-articles__description"
                />
                <p
                  class="c-related-articles__link-info"
                >
                  Nettside hos vg.no
                </p>
              </article>
              <div
                class="emotion-7"
              >
                <div
                  data-tooltip="Endre ekstern artikkel"
                  data-tooltip-container="true"
                >
                  <button
                    aria-label="Endre ekstern artikkel"
                    class="emotion-8"
                    data-state="closed"
                    data-trigger="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </g>
                    </svg>
                  </button>
                </div>
                <div
                  data-tooltip="Slett ekstern artikkel"
                  data-tooltip-container="true"
                >
                  <button
                    aria-label="Slett ekstern artikkel"
                    class="emotion-5"
                    data-state="closed"
                    data-trigger="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </g>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-cy="styled-article-modal"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label"
            role="combobox"
            style="position: relative;"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <label
                class="emotion-12 emotion-13"
                for="search-input-field"
              >
                Søk på tittel
              </label>
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="search-input-field-error "
                    aria-invalid="false"
                    aria-labelledby="downshift-0-label"
                    autocomplete="off"
                    data-testid="dropdownInput"
                    id="downshift-0-input"
                    name="search-input-field"
                    placeholder="Søk på tittel"
                    value=""
                  />
                  <div
                    class="emotion-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 48 48"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-19"
          >
            Eller
          </div>
          <button
            class="emotion-20"
            data-testid="showAddExternal"
            type="button"
          >
            Legg til ekstern artikkel
          </button>
        </div>
      </div>
    </div>
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-21 emotion-22"
      >
        <h3
          class="c-related-articles__component-title emotion-4"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-24"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-25"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-26"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      >
        <article
          class="c-related-articles__item c-related-articles__item--external-learning-resources"
        >
          <h3
            class="c-related-articles__title"
          >
            <div
              class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <g>
                        <polygon
                          points="0 0 24 0 24 24 0 24"
                        />
                        <path
                          d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                          fill="currentColor"
                          fill-rule="nonzero"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
            <span
              class="c-related-articles__link-wrapper"
            >
              <a
                class="c-related-articles__link"
                href="https://www.vg.no"
                rel="noopener noreferrer"
                target="_blank"
              >
                Verdens gang
              </a>
            </span>
          </h3>
          <p
            class="c-related-articles__description"
          />
          <p
            class="c-related-articles__link-info"
          >
            Nettside hos vg.no
          </p>
        </article>
      </div>
    </section>
  </div>
</div>
`;
